tests/baselines/reference/unusedFunctionsinNamespaces2.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces2.ts(2,9): error TS6133: 'function1' is declared but never used.


==== tests/cases/compiler/unusedFunctionsinNamespaces2.ts (1 errors) ====
    namespace Validation {
        var function1 = function() {
            ~~~~~~~~~
!!! error TS6133: 'function1' is declared but never used.
        }
    }